--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <div class="box">
     <div class="transparent"></div>
-    <img src="/12 pro .png" alt="">
+    <img src="./12 pro .png" alt="">
     <h1 class="item-title">iphone <br> 12 pro</h1>
 
     <h3>Price:</h3>
